--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -17,3 +17,4 @@
 "kl_tutorial_text_4" = "​Rate your experience so we can offer you the best personalized feed.";
 "kl_use_current_hpone_number_1" = "Use my Current Phone Number";
 "kl_use_current_hpone_number_2" = "\nContacts information required";
+"kl_loading" = "Loading ...";
