Add unnamed locations and fi imagePicker

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -18,3 +18,4 @@
 "kl_use_current_hpone_number_1" = "Use my Current Phone Number";
 "kl_use_current_hpone_number_2" = "\nContacts information required";
 "kl_loading" = "Loading ...";
+"kl_unnamed_location" = "Unnamed";
