--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -8,17 +8,17 @@
 
 
 "kl_tutorial_title_1" = "Create";
-"kl_tutorial_text_1" = "Quickly create beautiful, interactive events with friends.";
+"kl_tutorial_text_1" = "Quickly create beautiful, interactive\n events with friends.";
 "kl_tutorial_title_2" = "Explore";
-"kl_tutorial_text_2" = "Find the perfect events for you and share them with your friends.";
+"kl_tutorial_text_2" = "Find the perfect events for you and\n share them with your friends.";
 "kl_tutorial_title_3" = "Throw in";
-"kl_tutorial_text_3" = "You take care of the things that matter while we take care of the annoying tasks.";
+"kl_tutorial_text_3" = "You take care of the things that matter while\n we take care of the annoying tasks.";
 "kl_tutorial_title_4" = "Rate";
-"kl_tutorial_text_4" = "​Rate your experience so we can offer you the best personalized feed.";
+"kl_tutorial_text_4" = "​Rate your experience so we can offer\n you the best personalized feed.";
 "kl_use_current_hpone_number_1" = "Use my Current Phone Number";
 "kl_use_current_hpone_number_2" = "\nContacts information required";
 "kl_loading" = "Loading ...";
-"kl_unnamed_location" = "Unnamed";"kl_tutorial_text_4" = "​Rate your experience so we can offer you the best personalized feed.";
+"kl_unnamed_location" = "Unnamed";
 
 "error.unhandledNetworkError" = "A mysterious error occured.\nTry again and hope for the best.";
 "error.imessage.unavalible.title" = "iMessage";
