--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -43,6 +43,12 @@
 
 "auth.recoveryInfo" = "We’ve sent you an email to %@.\nClick the link in the mail to reset your password.\n\nIf you don’t see the email, check other places it may be, like your junk, spam, social, or other folders.";
 
+//Event privacy
+"event.privacy" = "PRIVACY";
+"event.privacy.public" = "Public – anyone can join and invite";
+"event.privacy.private" = "Private – only I can invite";
+"event.privacy.privateplus" = "Private+ – my guests and I can invite";
+
 //Search
 
 "search.placeholder.title" = "Sorry, no result for \"%@\"";
