--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -71,6 +71,9 @@
 //Authorization
 
 "auth.recoveryInfo" = "We’ve sent you an email to %@.\nClick the link in the mail to reset your password.\n\nIf you don’t see the email, check other places it may be, like your junk, spam, social, or other folders.";
+"user.autoDetactLocation.text" = "Hey, mate, we want to show you the best local events that's why we need you to allow using location services (or you can choose your location manually).";
+"user.autoDetactLocation.cancel" = "Cancel";
+"user.autoDetactLocation.allow" = "Allow";
 
 //Event privacy
 "event.privacy.window_title" = "PRIVACY";
