Commit change profile controlelr

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -105,3 +105,7 @@
 //Search
 
 "search.placeholder.title" = "Sorry, no result for \"%@\"";
+
+//Profile
+
+"profile.createdevents.title" = "CREATED EVENTS";
