added cell files

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -124,3 +124,8 @@
 "userlist.following.button" = "Following";
 "userlist.followers.count" = " followers";
 "userlist.events.count" = " events";
+
+
+"eventCellPaymentFree" = "FREE";
+"eventCellPaymentGoing" = "Going";
+"eventCellPaymentGo" = "Go";
