progress in gallery

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -136,3 +136,5 @@
 "locationCancel" = "Cancel";
 "locationOpenInGoogleMaps" = "Open in Google Maps";
 "locationOpenInAppleMaps" = "Open in Maps";
+
+"galleryHeader" = "GALLERY";
