Connect waiting cell with model

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -59,6 +59,7 @@
 
 //Events
 "event.type.title" = "EVENT TYPE";
+"event.raiting.title" = "EVENT RAITING ";
 
 "event.type.title.None" = "None";
 "event.type.title.Birthday" = "Birthday";
