Create payment history

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -171,6 +171,7 @@
 
 "pushesHeader" = "PUSH NOTIFICATIONS";
 "provacyHeader" = "PRIVACY POLICY";
+"settings.payment.history.title" = "PAYMENT HISTORY";
 "settings.payment.addCard" = "Add Card";
 
 "settings.cardView.cardNumber" = "Card number";
