Add save to event page and show real data in event lists

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -163,6 +163,9 @@
 "reminders6" = "1 day before";
 "reminders7" = "2 days before";
 
+"event.save" = "Save";
+"event.saved" = "Saved";
+
 //settings
 "settings.title" = "SETTINGS";
 "settings.menu.payment" = "Payment Settings";
