--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -12,7 +12,7 @@
 "kl_tutorial_title_1" = "Explore";
 "kl_tutorial_text_1" = "Find the perfect events for you and\n share them with your friends.";
 "kl_tutorial_title_3" = "Throw in";
-"kl_tutorial_text_3" = "You take care of the things that matter while\n we take care of the annoying tasks.";
+"kl_tutorial_text_3" = "You take care of the things that matter\nwhile we take care of the annoying tasks.";
 "kl_tutorial_title_4" = "Rate";
 "kl_tutorial_text_4" = "​Rate your experience so we can offer\n you the best personalized feed.";
 "kl_use_current_hpone_number_1" = "Use my Current Phone Number";
