Fix attendees title and crash in comments

--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -60,7 +60,7 @@
 //Events
 "event.type.title" = "EVENT TYPE";
 "event.raiting.title" = "EVENT RAITING ";
-"event_attendies" = "ATTENDIES";
+"event_attendies" = "ATTENDEES";
 
 "event.type.title.None" = "None";
 "event.type.title.Birthday" = "Birthday";
