--- a/Klike/Sources/Controllers/Localizable.strings
+++ b/Klike/Sources/Controllers/Localizable.strings
@@ -78,7 +78,7 @@
 
 "event.badge.free" = "FREE";
 "event.badge.sold_out" = "SOLD OUT";
-"event.badge.throw" = "$%.0f THROW IN";
+"event.badge.throw" = "$%.0f THROWN IN";
 "event.badge.payed" = "$%.0f";
 "event.location.distance" = "%.1f miles";
 
